[build-system]
requires = [
    "numpy>=2.0; python_version >= '3.9'",
    "scipy>=1.5.4; python_version >= '3.9'",
    "statsmodels>=0.13.2; python_version <= '3.9'",
    "cython>=0.29,!=0.29.18,!=0.29.31",
    "setuptools",
]
build-backend = "setuptools.build_meta:__legacy__" # TODO: Don't use legacy backend
